@@ -80,6 +80,14 @@ default_yac() {
     echo "@CALL$SOURCE_NAME~$SOURCE_DISP"
 }
 
+## "Advanced YAC" (for Gundalf's CallMonitor Client)
+ayac() {
+    rawmsg -T ayac -p 10629 -t "%s\0" "$@"
+}
+default_ayac() {
+    echo "@CALL${SOURCE_NAME}~${SOURCE_DISP}~${DEST_NAME}~${DEST_DISP}~${TIMESTAMP}~${EVENT}"
+}
+
 ## Usage: vdr [OPTION]... [MESSAGE]
 ## Send a message to a VDR (Video Disk Recorder, http://www.cadsoft.de/vdr/)
 vdr() {
